--- a/TagManager/VideoManager/Components/Pages/Editor.razor
+++ b/TagManager/VideoManager/Components/Pages/Editor.razor
@@ -1,14 +1,40 @@
 ﻿@page "/editor"
 @using VideoManager.Models
 @using System.ComponentModel.DataAnnotations
+@using Microsoft.AspNetCore.Components.Server.ProtectedBrowserStorage
+@inject ProtectedSessionStorage ProtectedSessionStore
 @inject IPizzaService PizzaService
 @inject ITagService TagService
 @inject IPizzaTagService PizzaTagService
+@inject IRealmService RealmService
 @rendermode InteractiveServer
 
+@if (!isConnected)
+{
+    <section>
+
+    <h3>Pizzas!</h3>
+    
+    <h2>Loading Realm...</h2>
+
+    </section>
+}
+else
+{
 <section>
 
     <h3>Pizzas!</h3>
+
+    <h2>Realm: </h2>
+
+    <InputSelect @bind-Value="selectedRealm">
+        @foreach (var option in realmNames)
+        {
+            <option value="@option">@option</option>
+        }
+    </InputSelect>
+
+    <p>You selected: @selectedRealm</p>
 
     <p> Block 1: Search bar & preview </p>
 
@@ -159,7 +185,7 @@
 
     @if (todaysPizzas == null)
     {
-        <p role="status">Pizzas are loading...</p>
+        <p role="status">No pizzas found...</p>
     }
     else
     {
@@ -174,8 +200,22 @@
               Responsive="true">
 
             <GridColumns>
+
+                <GridColumn TItem="Pizza" HeaderText="Thumbnail">
+                    <img src="@context.thumbnail"
+                         alt="thumbnail"
+                         style="width:60px; height:60px; object-fit:cover; border-radius:8px;" />
+                </GridColumn>
+
                 <GridColumn TItem="Pizza" HeaderText="Name">
                     @context._name
+                </GridColumn>
+
+                <GridColumn TItem="Pizza" HeaderText="Tags">
+                    @foreach (var tag in context.Tags)
+                    {
+                        <span class="badge bg-info text-dark me-1">@tag</span>
+                    }
                 </GridColumn>
 
             </GridColumns>
@@ -184,6 +224,7 @@
     }
 
 </section>
+}
 
 @code {
 
@@ -201,6 +242,12 @@
     private Button goSearchButton = default!;
     private Button clearSearchButton = default!;
 
+    private string? selectedRealm = default!;
+    private List<Realm> allRealms = default;
+    private List<string> realmNames = default!;
+
+    private bool isConnected;
+
     protected override void OnInitialized()
     {
         editContext = new EditContext(currentTag);
@@ -210,9 +257,30 @@
     protected override async Task OnInitializedAsync()
     {
         currentPizza._name = "";
-        availableTags = await TagService.GetTagList();
-        todaysPizzas = await PizzaService.GetPizzaList(currentSearchTagList);
+        allRealms = await RealmService.GetRealmList();
+        realmNames = allRealms?
+            .Select(r => r.name)
+            .ToList()
+            ?? new List<string>();
+        availableTags = await TagService.GetTagList(selectedRealm);
+        todaysPizzas = await PizzaService.GetPizzaList(selectedRealm, currentSearchTagList);
         await base.OnInitializedAsync();
+    }
+
+    protected override async Task OnAfterRenderAsync(bool firstRender)
+    {
+        if (firstRender)
+        {
+            isConnected = true;
+            await LoadRealmAsync();
+            StateHasChanged();
+        }
+    }
+
+    private async Task LoadRealmAsync()
+    {
+        var result = await ProtectedSessionStore.GetAsync<string>("selectedRealm");
+        selectedRealm = result.Success ? result.Value : default!;
     }
 
     @*
@@ -246,7 +314,12 @@
         addButton.ShowLoading("Adding...");
 
         // await Task.Delay(1000);
-        await PizzaTagService.CreateTag(currentTag.Id, currentTag.Value);
+        PizzaTag pizzaTagToCreate = new PizzaTag
+            {
+                pizzaId = currentTag.Id,
+                tagName = currentTag.Value
+            };
+        await PizzaTagService.CreateTag(pizzaTagToCreate);
         currentPizza.Tags = await PizzaTagService.GetTags(currentPizza.id);
 
         addButton.HideLoading();
@@ -276,7 +349,7 @@
     {
         goSearchButton.ShowLoading("Searching...");
 
-        todaysPizzas = await PizzaService.GetPizzaList(currentSearchTagList);
+        todaysPizzas = await PizzaService.GetPizzaList(selectedRealm, currentSearchTagList);
         currentPizza = new Pizza();
 
         goSearchButton.HideLoading();
